[gd_scene load_steps=8 format=3 uid="uid://bvaq87g2hr72f"]

[ext_resource type="Script" uid="uid://bacc8dxysip37" path="res://scripts/game.gd" id="1_u5sy4"]
[ext_resource type="Script" uid="uid://b8y2ikj2mrww0" path="res://scripts/input_screen.gd" id="1_yqjtg"]
[ext_resource type="Theme" uid="uid://55ylst53xaxy" path="res://themes/light_theme.tres" id="2_lnu2h"]
[ext_resource type="Theme" uid="uid://b67tv5v8ukr5x" path="res://themes/dark_theme.tres" id="3_lnu2h"]
[ext_resource type="Theme" uid="uid://cbds32u6wi2cf" path="res://themes/yellow_theme.tres" id="4_iywne"]
[ext_resource type="Theme" uid="uid://bj35dnqj1vtx1" path="res://themes/green_theme.tres" id="5_p57ef"]
[ext_resource type="PackedScene" uid="uid://ts3xf8r1ucb6" path="res://scenes/guess_text.tscn" id="6_p57ef"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_u5sy4")

[node name="InputScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -31.0
offset_right = 72.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_yqjtg")
light_theme = ExtResource("2_lnu2h")
dark_theme = ExtResource("3_lnu2h")
yellow_theme = ExtResource("4_iywne")
green_theme = ExtResource("5_p57ef")
metadata/_edit_use_anchors_ = true

[node name="Debug" type="Label" parent="InputScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.10851
anchor_top = 0.306452
anchor_right = 6.94184
anchor_bottom = 0.306452
offset_left = -200.625
offset_top = 10.0
offset_right = 17.3745
offset_bottom = 62.0
theme_override_font_sizes/font_size = 30
text = "..."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ResetButton" type="Button" parent="InputScreen"]
layout_mode = 0
offset_left = 1508.75
offset_top = 36.25
offset_right = 1629.75
offset_bottom = 89.25
text = "RESET"

[node name="MenuButton" type="Button" parent="InputScreen"]
layout_mode = 0
offset_left = 1376.25
offset_top = 36.25
offset_right = 1497.25
offset_bottom = 89.25
text = "MAIN MENU"

[node name="GuessText1" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 779.25
offset_top = 58.375
offset_right = 779.25
offset_bottom = 58.375
grow_horizontal = 2
grow_vertical = 2

[node name="GuessText2" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.43229
anchor_top = 0.332661
anchor_right = 1.43229
anchor_bottom = 0.332661
offset_left = 645.0
offset_top = 158.75
offset_right = 645.0
offset_bottom = 158.75

[node name="GuessText3" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.43229
anchor_top = 1.00806
anchor_right = 1.43229
anchor_bottom = 1.00806
offset_left = 645.0
offset_top = 206.875
offset_right = 645.0
offset_bottom = 206.875

[node name="GuessText4" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.43229
anchor_top = 1.66331
anchor_right = 1.43229
anchor_bottom = 1.66331
offset_left = 645.0
offset_top = 256.25
offset_right = 645.0
offset_bottom = 256.25

[node name="GuessText5" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.43229
anchor_top = 2.34879
anchor_right = 1.43229
anchor_bottom = 2.34879
offset_left = 645.0
offset_top = 303.75
offset_right = 645.0
offset_bottom = 303.75

[node name="GuessText6" parent="InputScreen" instance=ExtResource("6_p57ef")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.43229
anchor_top = 3.04435
anchor_right = 1.43229
anchor_bottom = 3.04435
offset_left = 645.0
offset_top = 350.625
offset_right = 645.0
offset_bottom = 350.625

[node name="Keyboard" type="Control" parent="InputScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.875
offset_top = -27.875
offset_right = -28.875
offset_bottom = 12.125
grow_horizontal = 2
grow_vertical = 2

[node name="EnterKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 220.0
offset_top = 880.0
offset_right = 420.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "ENTER"

[node name="DeleteKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1270.0
offset_top = 880.0
offset_right = 1470.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "DELETE"

[node name="AKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 310.0
offset_top = 760.0
offset_right = 420.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "A"

[node name="BKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 910.0
offset_top = 880.0
offset_right = 1020.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "B"

[node name="CKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 670.0
offset_top = 880.0
offset_right = 780.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "C"

[node name="DKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 550.0
offset_top = 760.0
offset_right = 660.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "D"

[node name="EKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 490.0
offset_top = 640.0
offset_right = 600.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "E"

[node name="FKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 670.0
offset_top = 760.0
offset_right = 780.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "F"

[node name="GKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 790.0
offset_top = 760.0
offset_right = 900.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "G"

[node name="HKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 910.0
offset_top = 760.0
offset_right = 1020.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "H"

[node name="IKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1090.0
offset_top = 640.0
offset_right = 1200.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "I"

[node name="JKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1030.0
offset_top = 760.0
offset_right = 1140.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "J"

[node name="KKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1150.0
offset_top = 760.0
offset_right = 1260.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "K"

[node name="LKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1270.0
offset_top = 760.0
offset_right = 1380.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "L"

[node name="MKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1150.0
offset_top = 880.0
offset_right = 1260.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "M"

[node name="NKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1030.0
offset_top = 880.0
offset_right = 1140.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "N"

[node name="OKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1210.0
offset_top = 640.0
offset_right = 1320.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "O"

[node name="PKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 1330.0
offset_top = 640.0
offset_right = 1440.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "P"

[node name="QKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 250.0
offset_top = 640.0
offset_right = 360.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "Q"

[node name="RKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 610.0
offset_top = 640.0
offset_right = 720.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "R"

[node name="SKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 430.0
offset_top = 760.0
offset_right = 540.0
offset_bottom = 870.0
theme = ExtResource("2_lnu2h")
text = "S"

[node name="TKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 730.0
offset_top = 640.0
offset_right = 840.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "T"

[node name="UKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 970.0
offset_top = 640.0
offset_right = 1080.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "U"

[node name="VKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 790.0
offset_top = 880.0
offset_right = 900.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "V"

[node name="WKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 370.0
offset_top = 640.0
offset_right = 480.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "W"

[node name="XKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 550.0
offset_top = 880.0
offset_right = 660.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "X"

[node name="YKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 850.0
offset_top = 640.0
offset_right = 960.0
offset_bottom = 750.0
theme = ExtResource("2_lnu2h")
text = "Y"

[node name="ZKey" type="Button" parent="InputScreen/Keyboard"]
layout_mode = 0
offset_left = 430.0
offset_top = 880.0
offset_right = 540.0
offset_bottom = 990.0
theme = ExtResource("2_lnu2h")
text = "Z"

[connection signal="pressed" from="InputScreen/ResetButton" to="InputScreen" method="_on_reset_button_pressed"]
[connection signal="pressed" from="InputScreen/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="show_debug_victory" from="InputScreen/GuessText1" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="show_debug_victory" from="InputScreen/GuessText2" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="show_debug_victory" from="InputScreen/GuessText3" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="show_debug_victory" from="InputScreen/GuessText4" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="show_debug_victory" from="InputScreen/GuessText5" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="show_debug_victory" from="InputScreen/GuessText6" to="InputScreen" method="_on_guess_text_show_debug_victory"]
[connection signal="pressed" from="InputScreen/Keyboard/EnterKey" to="InputScreen" method="_on_enter_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/DeleteKey" to="InputScreen" method="_on_delete_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/AKey" to="InputScreen" method="_on_a_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/BKey" to="InputScreen" method="_on_b_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/CKey" to="InputScreen" method="_on_c_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/DKey" to="InputScreen" method="_on_d_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/EKey" to="InputScreen" method="_on_e_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/FKey" to="InputScreen" method="_on_f_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/GKey" to="InputScreen" method="_on_g_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/HKey" to="InputScreen" method="_on_h_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/IKey" to="InputScreen" method="_on_i_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/JKey" to="InputScreen" method="_on_j_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/KKey" to="InputScreen" method="_on_k_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/LKey" to="InputScreen" method="_on_l_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/MKey" to="InputScreen" method="_on_m_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/NKey" to="InputScreen" method="_on_n_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/OKey" to="InputScreen" method="_on_o_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/PKey" to="InputScreen" method="_on_p_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/QKey" to="InputScreen" method="_on_q_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/RKey" to="InputScreen" method="_on_r_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/SKey" to="InputScreen" method="_on_s_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/TKey" to="InputScreen" method="_on_t_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/UKey" to="InputScreen" method="_on_u_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/VKey" to="InputScreen" method="_on_v_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/WKey" to="InputScreen" method="_on_w_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/XKey" to="InputScreen" method="_on_x_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/YKey" to="InputScreen" method="_on_y_key_pressed"]
[connection signal="pressed" from="InputScreen/Keyboard/ZKey" to="InputScreen" method="_on_z_key_pressed"]
